--- a/ui/package.json
+++ b/ui/package.json
@@ -7,21 +7,22 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "mkdir -p public/wasm && cp -r node_modules/scanbot-web-sdk/bundle/bin/barcode-scanner/* public/wasm || true"
   },
   "dependencies": {
     "@mantine/charts": "^8.3.5",
     "@mantine/core": "^8.3.5",
     "@mantine/dates": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
-    "@zxing/browser": "^0.1.5",
-    "@zxing/library": "^0.21.3",
     "dayjs": "^1.11.18",
+    "dotenv": "^17.2.3",
     "feather-icons": "^4.29.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "scanbot-web-sdk": "7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
