hooking up the back end to scanner input; tsconfig corrections; moved env vars to .env file (remove when ready);

--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/lodash": "^4.17.16",
     "@types/massive": "^5.4.7",
+    "axios": "^1.13.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
