--- a/ui/.env
+++ b/ui/.env
@@ -1,4 +1,6 @@
-const LICENSE_KEY =
+API_BASE_PATH='http://localhost:5005'
+
+SCANBOT_LICENSE_KEY =
   "e2icMrANnZd4XvpJ0FivQ8uZOOMlj9" +
   "x0sqPxyB1o7DGds2JM3sHtuqkWprBR" +
   "N5pYW3wHVqukTdAig72/3FOiNNdt3G" +
