Adding new table element; Adding query params to google book api request; Added react-router; styling changes;

--- a/ui/package.json
+++ b/ui/package.json
@@ -15,12 +15,15 @@
     "@mantine/core": "^8.3.5",
     "@mantine/dates": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
     "feather-icons": "^4.29.2",
+    "mantine-datatable": "^8.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0",
     "scanbot-web-sdk": "7.2.0"
   },
